--- a/package.json
+++ b/package.json
@@ -4,9 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node ",
-    "reload": "node ./src/register.js"
+    "start": "ts-node src/Bot.ts"
   },
   "repository": {
     "type": "git",
@@ -24,5 +22,10 @@
     "discord.js": "^14.6.0",
     "dotenv": "^16.0.3",
     "node": "^19.1.0"
+  },
+  "devDependencies": {
+    "@types/node": "^18.11.9",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.9.3"
   }
 }
