--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "ts-node src/Bot.ts"
+    "build": "tsc",
+    "start": "node build/index.js",
+    "dev": "concurrently \"tsc -w\" \"nodemon build/index.js\""
   },
   "repository": {
     "type": "git",
@@ -17,15 +19,13 @@
     "url": "https://github.com/BonattoEduardo/SteamBoat/issues"
   },
   "homepage": "https://github.com/BonattoEduardo/SteamBoat#readme",
-  "type": "module",
+  "devDependencies": {
+    "concurrently": "^7.5.0",
+    "nodemon": "^2.0.20",
+    "typescript": "^4.9.3"
+  },
   "dependencies": {
     "discord.js": "^14.6.0",
-    "dotenv": "^16.0.3",
-    "node": "^19.1.0"
-  },
-  "devDependencies": {
-    "@types/node": "^18.11.9",
-    "ts-node": "^10.9.1",
-    "typescript": "^4.9.3"
+    "dotenv": "^16.0.3"
   }
 }
