--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "typescript": "^4.9.3"
   },
   "dependencies": {
+    "axios": "^1.1.3",
     "discord.js": "^14.6.0",
     "dotenv": "^16.0.3"
   }
