--- a/package.json
+++ b/package.json
@@ -9,24 +9,16 @@
     "start": "node build/index.js",
     "dev": "concurrently \"tsc -w\" \"nodemon build/index.js\""
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/BonattoEduardo/SteamBoat.git"
-  },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/BonattoEduardo/SteamBoat/issues"
-  },
-  "homepage": "https://github.com/BonattoEduardo/SteamBoat#readme",
   "devDependencies": {
     "concurrently": "^7.5.0",
     "nodemon": "^2.0.20",
     "typescript": "^4.9.3"
   },
   "dependencies": {
-    "axios": "^1.1.3",
+    "axios": "1.1.3",
     "discord.js": "^14.6.0",
     "dotenv": "^16.0.3"
   }
